samples/_failures_safe/1761277994_c40356_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e71771f.c: In function ‘main’:
./samples/SAFE/__tmp_0e71771f.c:147:16: error: missing terminating " character
  147 |         printf("4. Transpose matrix B
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0e71771f.c:147:9: error: expected expression at end of input
  147 |         printf("4. Transpose matrix B
      |         ^~~~~~
./samples/SAFE/__tmp_0e71771f.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e71771f.c:147:9: error: expected declaration or statement at end of input
